# mapistar

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  TODO  app.py  app3.py  bug.txt  db.local  env.example  essait.txt  manage.py  migrate.py  migrate2.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  todo.txt  travis_pypi_setup.py
aaatests2/: conftest.py
aaatests2/actes/: actes_factory.py  test_models.py  test_permissions.py
aaatests2/patients/: patients_factory.py
aaatests2/users/: test_utils.py  users_factory.py
aaatests2/utils/: test_schemas.py  test_shortcuts.py
ancien/: pony_backend.py
ancien/actes/: models.py  permissions.py  urls.py  views.py
ancien/actes/migrations/: 0001_initial.py  0003_prescriptionlibre.py
ancien/actes/schemas/: __init__.py
ancien/patientsold/: models.py  schemas.py  urls.py  views.py
ancien/patientsold/migrations/: 0001_initial.py  (+1 more)
ancien/users/: authentication.py  models.py  urls.py  views.py
config/: base.py  get_env.py  local.py  test.py  urls.py
config/settings/: __init__.py  base.py  local.py  testing.py
docs/: Makefile  changelog.rst  composants.rst  conf.py  index.rst  migrations.rst  modules.rst  permissions.rst  principes.rst  todo.rst  users.rst
docs/api/: mapistar.actes.rst  mapistar.rst  modules.rst
mapistar/: __init__.py  aa.db  annuaire.py  app.py  auth.py  base_db.py  components.py  db.py  db.sqlite  directives.py  documents.py  exceptions.py  first_run.py  main.py  models.py  ordonnances.py  patients.py  permissions.py  pony_backend.py  settings.py  shortcuts.py  theso.py  userclass.py  users.py  utils.py
mapistar/actes/: __init__.py  actes.py  actesviews.py  avis.py  correspondances.py  models.py  observations.py  ordo_items.py  ordonnances.py  permissions.py  routes.py  schemas.py  urls.py  views.py
mapistar/migrations/: 0001_initial.py  0002_2018-03-16_18-07-07.py  0003_2018-03-16_18-13-38.py  0003_2018-03-16_18-29-37.py  0004_2018-03-16_19-18-11.py
mapistar/patients/: models.py  schemas.py  urls.py  views.py
mapistar/patientsold/: urls.py
mapistar/users/: authentication.py  utils.py
mapistar/utils/: schemas.py  shortcuts.py
old/: conftest.py
old/integration/: test_cli.py
old/unit/: test_actes.py  test_annuaire.py  test_ordonnances.py  test_patients.py  test_utils.py
test_views/: conftest.py  test_ordonnances.py  test_patients.py
tests/: conftest.py  factories.py  factory.py  fixtures.py  runner.py  sand.py  test_actes.py  test_auth.py  test_bug.py  test_cli.py  test_main.py  test_ordo_items.py  test_ordonnances.py  test_patients.py  test_patients2.py  test_permissions.py  test_sand.py  test_schemas  test_schemas.py  test_shortcuts.py  test_theso.py  test_users.py  test_utils.py
tests/actes/: test_actesviews.py  test_schemas.py
tests/integration/: runner.py  test_cli.py
tests/patients/: patients_factory.py  test_models.py  test_views.py
tests/test_utils.py/: test_shortcut.py
tests/unit/: test_actes.py  test_annuaire.py  test_documents.py  test_first_run.py  test_ordo_items.py  test_ordonnances.py  test_patients.py  test_permissions.py  test_schemas.py  test_theso.py  test_users.py  test_utils.py
tests/users/: test_authentication.py  test_views.py
tests_integ/: conftest.py  runner.py  test_actes.py  test_cli.py  test_ordonnances.py  test_permissions.py  test_users.py
(+8 files in other folders)
